# gmt-c

./: .gitignore  CMakeLists.txt  README.md
cmake/: gmt-c-config.cmake.in
include/: platform.h  sha1.h
include/gmt/: gmt.h
source/: gmt.c  gmt_test.c  sha1.c  unix.c  win32.c
